--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@ ul.nav a:hover, ul.nav a:active, ul.nav a:focus {
 	  
 	
 <tr>
-    <td><img src="pdot.jpg" width="192" height="75" class="image_float_left" /> </td>
+    <td><img src="pdot.jpg" width="192"  class="image_float_left" /> </td>
     <td><strong>Intersection Prediction from Single 360° Image via Deep Detection of Possible Direction of Travel.</strong><br />
     <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">  Naoki Sugimoto, Satoshi Ikehata and Kiyoharu Aizawa.  In proceedings of 
 	  British Machine Vision Conference (BMVC), 2021 (<a href="https://www.bmvc2021-virtualconference.com/assets/papers/0423.pdf" target="_blank">paper</a>). </span></td>
@@ -274,17 +274,17 @@ Wrestlers Attractive and Fearful. </strong><br />
     <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">Tomohiko Akagi, Satoshi Ikehata, Takeharu Seno.  In proceedings of The 5th asian color association conference (ACA), 2019. </span></td>
 </tr>
 <tr>
-    <td><img src="fig_eccv2018.png" width="192" height="75" class="image_float_left" /> </td>
+    <td><img src="fig_eccv2018.png" width="192" class="image_float_left" /> </td>
     <td><strong>CNN-PS: CNN-based Photometricc Stereo for General Non-Convex Surfaces. </strong><br />
     <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">  Satoshi Ikehata.  In proceedings of European Conference on Computer Vision (ECCV), 2018 (<a href="https://github.com/satoshi-ikehata/CNN-PS" target="_blank">paper, supplementary, codes (github)</a>). </span></td>
 </tr>
 <tr>
-    <td><img src="fig_mta2018.png" width="192" height="99" class="image_float_left" /> </td>
+    <td><img src="fig_mta2018.png" width="192" class="image_float_left" /> </td>
     <td><strong>Efficiency-enhanced cost-volume filtering featuring coarse-to-fine strategy.</strong><br />
     <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2"> Ryosuke Furuta, Satoshi Ikehata, Toshihiko Yamaskai, Kiyoharu Aizawa.  Multimedia Tools Appl. 77(10): 12469-12491, 2018 (<a href="https://link.springer.com/content/pdf/10.1007%2Fs11042-017-4897-1.pdf" target="_blank">paper</a>). </span></td>
 </tr>
 <tr>
-    <td><img src="fig_eccv2018workshop.png" width="192" height="99" class="image_float_left" /> </td>
+    <td><img src="fig_eccv2018workshop.png" width="192"  class="image_float_left" /> </td>
     <td><strong>Scale Drift Correction of Camera Geo-Localization using Geo-Tagged Images</strong><br />
     <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2"> Kazuya Iwami, Satoshi Ikehata, Kiyoharu Aizawa. 6th Workshop on Computer Vision for Road Scene Understanding and Autonomous Driving (ECCV2018 Workshop), 2018 (<a href="https://arxiv.org/abs/1808.08544" target="_blank">preprint</a>). </span></td>
 </tr>
@@ -305,17 +305,17 @@ Wrestlers Attractive and Fearful. </strong><br />
     <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">Satoshi Ikehata, Hang Yan and Yasutaka Furukawa. In proceedings of IEEE International Conference on Computer Vision (ICCV), 2015 (accepted as an oral presentation, 3.30%) (<a href="https://www.cse.wustl.edu/~sikehata/sim/" target="_blank">project page</a>). </span></td>
 </tr>
 <tr>
-    <td><img src="fig_icip2014.bmp" width="192" height="99" class="image_float_left" /> </td>
+    <td><img src="fig_icip2014.bmp" width="192"class="image_float_left" /> </td>
     <td><strong>Coarse-to-Fine Strategy for Efficient Cost-Volume Filtering</strong><br />
     <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">Ryosuke Furuta, Satoshi Ikehata, Toshihiko Yamasaki and Kiyoharu Aizawa. In proceedings of IEEE International Conference on Image Procession(ICIP), 2014 (<a href="icip2014.pdf" target="_blank">paper</a>). </span></td>
   </tr>
 <tr>
-    <td><img src="fig_cvpr2014.png" width="192" height="99" class="image_float_left" /> </td>
+    <td><img src="fig_cvpr2014.png" width="192" class="image_float_left" /> </td>
     <td><strong>Photometric Stereo using Constrained Bivariate Regression for General Isotropic Surfaces</strong><br />
     <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">Satoshi Ikehata and Kiyoharu Aizawa. In proceedings of Computer Vision and Pattern Recognition (CVPR), 2014 (accepted as an oral presentation, 5.76%) (<a href="CBRPScvpr2014.pdf" target="_blank">paper</a>, <a href="supp_cvpr2014.pdf" target="_blank">supplementary</a>, <a href="https://drive.google.com/open?id=1sTuxhKbgnd7iAsyFOKf5zCMEraORpwNx" target="_blank">source codes</a>). </span></td>
   </tr>
   <tr>
-    <td><img src="fig_pami2014.png" width="192" height="99" class="image_float_left" /> </td>
+    <td><img src="fig_pami2014.png" width="192" class="image_float_left" /> </td>
     <td><strong>Photometric Stereo using Sparse Bayesian Regression for General Diffuse Surfaces</strong><br />
     <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">Satoshi Ikehata, David Wipf, Yasuyuki Matsushita and Kiyoharu Aizawa. IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI), 2014 (<a href="https://drive.google.com/open?id=1VetVYjmniOBBb4YY7xFdHxKAZ7WIkRIY" target="_blank">source codes</a>). </span></td>
   </tr>
@@ -325,17 +325,17 @@ Wrestlers Attractive and Fearful. </strong><br />
     <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">Satoshi Ikehata, Ji-Ho Cho and Kiyoharu Aizawa. In proceedings of IEEE International Conference on Image Procession(ICIP), 2013, (<a href="ICIP2013_SR_cm.pdf" target="_blank">pdf</a>). </span></td>
   </tr>
   <tr>
-    <td><img src="fig_ivmsp2013.png" width="192" height="99" class="image_float_left" /> </td>
+    <td><img src="fig_ivmsp2013.png" width="192" class="image_float_left" /> </td>
     <td><strong>Depth Map Upsampling using Cost-Volume Filtering</strong><br />
     <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">Ji-Ho Cho, Satoshi Ikehata, Hyunjin Yoo, Margrit Gelautz and Kiyoharu Aizawa. In proceedings of 11th IEEE IVMSP Workshop: 3D Image/Video Technologies and Applications, 2013, (<a href="IVMSP2013_CR.pdf" target="_blank">pdf</a>). </span></td>
   </tr>
   <tr>
-    <td><img src="fig_apsipa.png" width="192" height="99" class="image_float_left" /> </td>
+    <td><img src="fig_apsipa.png" width="192"  class="image_float_left" /> </td>
     <td><strong>Confidence-based Refinement of Corrupted Depth Maps</strong><br />
     <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">Satoshi Ikehata and Kiyoharu Aizawa.    In proceedings of Signal & Information Processing Association Annual Summit and Conference (APSIPA ASC), 2012, (<a href="ikehata_apsipa2012.pdf" target="_blank">pdf</a>). </span></td>
   </tr>
   <tr>
-    <td><img src="fig_cvpr2012.png" width="192" height="99" class="image_float_left" /> </td>
+    <td><img src="fig_cvpr2012.png" width="192"class="image_float_left" /> </td>
     <td><strong>Robust Photometric Stereo using Sparse Regression</strong><br />
     <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">Satoshi Ikehata, David Wipf, Yasuyuki Matsushita, and Kiyoharu Aizawa. In proceedings of Computer Vision and Pattern Recognition (CVPR), 2012, (<a href="SBLPS_cvpr2012.pdf" target="_blank">pdf</a>, </span></span><a href="SBLPS-supp.pdf" target="_blank">supplementary</a>, <a href="https://drive.google.com/open?id=19IyBj3oynHXD7VQqX5BhG5l4lXlXhe4V" target="_blank">codes</a>).</td>
   </tr>
