--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@ ul.nav a:hover, ul.nav a:active, ul.nav a:focus {
 	 <td width="12%">8/2018 </td>
 	 <td width="88%">Source code of BMVC2021 work is now available.</td>
 </tr>
-	  
+
 <tr>
 	 <td width="12%">8/2018 </td>
 	 <td width="88%">Source code of ECCV2018 work is now available.</td>
@@ -241,32 +241,32 @@ ul.nav a:hover, ul.nav a:active, ul.nav a:focus {
 <tr>
     <td><img src="fig_cvpr2022.png" width="192" class="image_float_left" /> </td>
     <td><strong>Universal Photometric Stereo Network using Global Lighting Contexts. </strong><br />
-    <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">  Satoshi Ikehata.  In proceedings of CVF/IEEE Computer Vision and Pattern Recognition (CVPR), 2022 (to appear). </span></td>
+    <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">  Satoshi Ikehata.  In proceedings of CVF/IEEE Computer Vision and Pattern Recognition (CVPR), 2022 (<a href="univps/univps_cvpr2022.html" target="_blank">project site</a>. </span></td>
 </tr>
-	  
+
 <tr>
     <td><img src="pstransformer.jpg" width="192" class="image_float_left" /> </td>
     <td><strong>PS-Transformer: Learning Sparse Photometric Stereo Network using Self-Attention Mechanism. </strong><br />
     <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">  Satoshi Ikehata.  In proceedings of British Machine Vision Conference (BMVC), 2021 (<a href="https://www.bmvc2021-virtualconference.com/assets/papers/0319.pdf" target="_blank">paper</a>, <a href="https://github.com/satoshi-ikehata/PS-Transformer-BMVC2021" target="_blank">github</a>). </span></td>
 </tr>
-	  
-	
+
+
 <tr>
     <td><img src="pdot.jpg" width="192"  class="image_float_left" /> </td>
     <td><strong>Intersection Prediction from Single 360° Image via Deep Detection of Possible Direction of Travel.</strong><br />
-    <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">  Naoki Sugimoto, Satoshi Ikehata and Kiyoharu Aizawa.  In proceedings of 
+    <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">  Naoki Sugimoto, Satoshi Ikehata and Kiyoharu Aizawa.  In proceedings of
 	  British Machine Vision Conference (BMVC), 2021 (<a href="https://www.bmvc2021-virtualconference.com/assets/papers/0423.pdf" target="_blank">paper</a>). </span></td>
 </tr>
 <tr>
     <td><img src="360sr.jpg" width="192" class="image_float_left" /> </td>
     <td><strong>360° Single Image Super Resolution via Distortion-Aware Network and Distorted Perspective Images.</strong><br />
     <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">  Akito Nishiyama, Satoshi Ikehata, Kiyoharu Aizawa.  In proceedings of International Conference on Image Processing (ICIP), 2021 (<a href="https://ieeexplore.ieee.org/document/9506233" target="_blank">paper</a>). </span></td>
-</tr>	  
+</tr>
 <tr>
     <td></td>
     <td><strong>三次元構造エッジ推定に基づく深層学習を用いた単眼画像からのシーンメッシュ復元.</strong><br />
     <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">  金子真也,櫻田健,池畑諭,相澤清晴.  画像の認識・理解シンポジウム（MIRU), 2020 </span></td>
-</tr>  
+</tr>
 <tr>
     <td></td>
     <td><strong>The Color Black is Most Important and Special for Making Professional
