--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@ ul.nav a:hover, ul.nav a:active, ul.nav a:focus {
 <tr>
     <td><img src="fig_cvpr2022.png" width="192" class="image_float_left" /> </td>
     <td><strong>Universal Photometric Stereo Network using Global Lighting Contexts. </strong><br />
-    <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">  Satoshi Ikehata.  In proceedings of CVF/IEEE Computer Vision and Pattern Recognition (CVPR), 2022 (<a href="univps/univps_cvpr2022.html" target="_blank">project site</a>. </span></td>
+    <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">  Satoshi Ikehata.  In proceedings of CVF/IEEE Computer Vision and Pattern Recognition (CVPR), 2022 (<a href="cvpr2022/univps_cvpr2022.html" target="_blank">project site</a>). </span></td>
 </tr>
 
 <tr>
