--- a/cvpr2022/univps_cvpr2022.html
+++ b/cvpr2022/univps_cvpr2022.html
@@ -388,10 +388,10 @@
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
     <pre><code>@article{park2021nerfies,
-  author    = {Park, Keunhong and Sinha, Utkarsh and Barron, Jonathan T. and Bouaziz, Sofien and Goldman, Dan B and Seitz, Steven M. and Martin-Brualla, Ricardo},
-  title     = {Nerfies: Deformable Neural Radiance Fields},
-  journal   = {ICCV},
-  year      = {2021},
+  author    = {Satoshi Ikehata},
+  title     = {Universal Photometric Stereo Network using Global Lighting Contexts},
+  journal   = {CVPR},
+  year      = {2022},
 }</code></pre>
   </div>
 </section>
