--- a/cvpr2022/univps_cvpr2022.html
+++ b/cvpr2022/univps_cvpr2022.html
@@ -397,7 +397,7 @@
 </section>
 
 
-<footer class="footer">
+<!-- <footer class="footer">
   <div class="container">
     <div class="content has-text-centered">
       <a class="icon-link"
@@ -421,7 +421,7 @@
       </div>
     </div>
   </div>
-</footer>
+</footer> -->
 
 </body>
 </html>
