--- a/index.html
+++ b/index.html
@@ -203,6 +203,11 @@ ul.nav a:hover, ul.nav a:active, ul.nav a:focus {
 <table width="90%" border="0" class="news_table">
 <tr>
 	 <td width="12%">8/2018 </td>
+	 <td width="88%">Project website of CVPR2022 work is now available.</td>
+</tr>
+
+<tr>
+	 <td width="12%">8/2018 </td>
 	 <td width="88%">Source code of BMVC2021 work is now available.</td>
 </tr>
 
