--- a/cvpr2022/univps_cvpr2022.html
+++ b/cvpr2022/univps_cvpr2022.html
@@ -111,6 +111,15 @@
                 </a>
               </span>
               <span class="link-block">
+                <a href="static/pdf/UniPS_GLC_supp.pdf"
+                   class="external-link button is-normal is-rounded is-dark">
+                  <span class="icon">
+                      <i class="fas fa-file-pdf"></i>
+                  </span>
+                  <span>Supp</span>
+                </a>
+              </span>
+              <span class="link-block">
                 <a href=""
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
