--- a/index.html
+++ b/index.html
@@ -244,6 +244,19 @@ ul.nav a:hover, ul.nav a:active, ul.nav a:focus {
 <h4 class="session">Selected Papers</h4>
 <table width="100%" border="0">
 <tr>
+    <td><img src="fig_icip2022_ps.jpg" width="192" class="image_float_left" /> </td>
+    <td><strong>Does Physical Interpretability of Observation Map Improve the Photometric Stereo Network? </strong><br />
+    <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">  Satoshi Ikehata.  In proceedings of IEEE International Conference on Image Processing (ICIP), 2022. </span></td>
+</tr>
+
+<tr>
+    <td><img src="fig_icip2022_od.png" width="192" class="image_float_left" /> </td>
+    <td><strong>Dual-ERP representation for Object Detection in 360 degree images. </strong><br />
+    <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">  Miao Cao, Satoshi Ikehata, Kiyoharu Aizawa.  In proceedings of IEEE International Conference on Image Processing (ICIP), 2022. </span></td>
+</tr>
+
+
+<tr>
     <td><img src="fig_cvpr2022.png" width="192" class="image_float_left" /> </td>
     <td><strong>Universal Photometric Stereo Network using Global Lighting Contexts. </strong><br />
     <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">  Satoshi Ikehata.  In proceedings of CVF/IEEE Computer Vision and Pattern Recognition (CVPR), 2022 (<a href="cvpr2022/univps_cvpr2022.html" target="_blank">project site</a>). </span></td>
