--- a/index.html
+++ b/index.html
@@ -237,14 +237,26 @@ ul.nav a:hover, ul.nav a:active, ul.nav a:focus {
   </tr>
 </table>
 <h3 class="session">Class (SOKENDAI)</h3>
-	<p> Fall 2020: <a href="mediaprocessing2020.html" target="_blank">Fundamentals of Media Processing</a>.</p>
+	<p> Fall 2020: <a href="mediaprocessing2020.html" target="_blank">Fundamentals of Media Processing</a></p>
 <h3 class="session">Research Interests</h3>
     <p>3D Scene Reconstruction, Time-of-flight Imaging, Image Super-resolution, Virtual and Augmented Reality, Human Cognition and Perception</p>
 
 <h4 class="session">Selected Papers</h4>
 <table width="100%" border="0">
 <tr>
-    <td><img src="fig_icip2022_ps.jpg" width="192" class="image_float_left" /> </td>
+    <td><img src="fig_bmvc2022.png" width="192" class="image_float_left" /> </td>
+    <td><strong>Non-uniform Sampling Strategies for NeRF on 360 images  </strong><br />
+    <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">  Takashi Otonari, Satoshi Ikehata, Kiyoharu Aizawa.  In proceedings of British Machine Vision Conference (BMVC), 2022.<tr>
+</tr>
+
+<tr>
+    <td><img src="fig_access2022.png" width="192" class="image_float_left" /> </td>
+    <td><strong>Saliency-Based Multiple Region of Interest Detection From a Single 360° Image  </strong><br />
+    <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">  Yuki Sawabe, Satoshi Ikehata, Kiyoharu Aizawa. In IEEE Access, vol. 10, pp. 89124-89133, 2022.<tr>
+</tr>
+
+<tr>
+    <td><img src="fig_icip2022_ps.jpg" width="192" class="image_float_left" /> </td>    
     <td><strong>Does Physical Interpretability of Observation Map Improve the Photometric Stereo Network? </strong><br />
     <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">  Satoshi Ikehata.  In proceedings of IEEE International Conference on Image Processing (ICIP), 2022. </span></td>
 </tr>
