--- a/index.html
+++ b/index.html
@@ -244,6 +244,12 @@ ul.nav a:hover, ul.nav a:active, ul.nav a:focus {
 <h4 class="session">Selected Papers</h4>
 <table width="100%" border="0">
 <tr>
+    <td><img src="cvpr2023.png" width="192" class="image_float_left" /> </td>
+    <td><strong>Scalable, Detailed and Mask-free Universal Photometric Stereo (Title may change)  </strong><br />
+    <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">  Satoshi Ikehata.  In proceedings of CVF/IEEE Computer Vision and Pattern Recognition (CVPR), 2023.<tr>
+</tr>
+	  
+<tr>
     <td><img src="fig_bmvc2022.png" width="192" class="image_float_left" /> </td>
     <td><strong>Non-uniform Sampling Strategies for NeRF on 360 images  </strong><br />
     <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">  Takashi Otonari, Satoshi Ikehata, Kiyoharu Aizawa.  In proceedings of British Machine Vision Conference (BMVC), 2022.<tr>
