--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@ ul.nav a:hover, ul.nav a:active, ul.nav a:focus {
 <table width="100%" border="0">
 <tr>
     <td><img src="cvpr2023.png" width="192" class="image_float_left" /> </td>
-    <td><strong>Scalable, Detailed and Mask-free Universal Photometric Stereo (Title may change)  </strong><br />
+    <td><strong>Scalable, Detailed and Mask-free Universal Photometric Stereo</strong><br />
     <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">  Satoshi Ikehata.  In proceedings of CVF/IEEE Computer Vision and Pattern Recognition (CVPR), 2023. (accepted as a highlight paper, 2.5%)<tr>
 </tr>
 	  
