--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@ ul.nav a:hover, ul.nav a:active, ul.nav a:focus {
 <tr>
     <td><img src="fig_icip2022_ps.jpg" width="192" class="image_float_left" /> </td>    
     <td><strong>Does Physical Interpretability of Observation Map Improve the Photometric Stereo Network? </strong><br />
-    <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">  Satoshi Ikehata.  In proceedings of IEEE International Conference on Image Processing (ICIP), 2022. </span></td>
+    <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">  Satoshi Ikehata.  In proceedings of IEEE International Conference on Image Processing (ICIP), 2022. (<a href="ICIP2022_PS.pdf" target="_blank">paper</a>) </span></td>
 </tr>
 
 <tr>
