--- a/index.html
+++ b/index.html
@@ -177,10 +177,16 @@ ul.nav a:hover, ul.nav a:active, ul.nav a:focus {
         <td align="left"><strong>Satoshi Ikehata, PhD</strong></td>
       </tr>
       <tr>
-        <td align="left">Assistant Proffesor in  <a href="https://www.nii.ac.jp/en/" target="_blank">National Institute of Informatics</a>
-				</td>
+        <td align="left">Assistant Proffesor in  <a href="https://www.nii.ac.jp/en/" target="_blank">National Institute of Informatics (Since 2017)</a>
+			</td>
       </tr>
       <tr>
+	  <td align="left">Specially Appointed Associate Proffesor at <a href="https://d-itlab.c.titech.ac.jp/miru2022event//" target="_blank">Recognition and Learning Algoritym Laboratory in Tokyo Tech (Since 2023)</a>
+      </tr>
+      <tr>
+	  <td align="left">Visiting Researcher at  <a href="http://www.hal.t.u-tokyo.ac.jp/lab/en/index_1.xhtml" target="_blank">Aizawa-Yamakata-Matsui Lab in UTokyo (Since 2020)</a>
+      </tr>
+	  <tr>
         <td align="left"> Address: 2-1-2 Hitotsubashi, Chiyoda-ku, Tokyo 101-8430<br /></td>
       </tr>
       <tr>
