--- a/index.html
+++ b/index.html
@@ -209,6 +209,11 @@ ul.nav a:hover, ul.nav a:active, ul.nav a:focus {
 <table width="90%" border="0" class="news_table">
 <tr>
 	 <td width="12%">6/2022 </td>
+	 <td width="88%">Project website of CVPR2023 work is now available.</td>
+</tr>
+	  
+<tr>
+	 <td width="12%">6/2022 </td>
 	 <td width="88%">Project website of CVPR2022 work is now available.</td>
 </tr>
 
@@ -252,7 +257,7 @@ ul.nav a:hover, ul.nav a:active, ul.nav a:focus {
 <tr>
     <td><img src="cvpr2023.png" width="192" class="image_float_left" /> </td>
     <td><strong>Scalable, Detailed and Mask-free Universal Photometric Stereo</strong><br />
-    <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">  Satoshi Ikehata.  In proceedings of CVF/IEEE Computer Vision and Pattern Recognition (CVPR), 2023. (accepted as a highlight paper, 2.5%)<tr>
+    <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">  Satoshi Ikehata.  In proceedings of CVF/IEEE Computer Vision and Pattern Recognition (CVPR), 2023. (accepted as a highlight paper, 2.5%) (<a href="https://arxiv.org/abs/2303.15724" target="_blank">paper (arxiv)</a>, <a href="https://github.com/satoshi-ikehata/SDM-UniPS-CVPR2023" target="_blank">code (github)</a>)<tr>
 </tr>
 	  
 <tr>
