--- a/index.html
+++ b/index.html
@@ -254,6 +254,14 @@ ul.nav a:hover, ul.nav a:active, ul.nav a:focus {
 
 <h4 class="session">Selected Papers</h4>
 <table width="100%" border="0">
+
+<tr>
+    <td><img src="fig_icip2022_od.png" width="192" class="image_float_left" /> </td>
+    <td><strong>Field-of-View IoU for Object Detection in 360° Images. </strong><br />
+    <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">  Miao Cao, Satoshi Ikehata, Kiyoharu Aizawa.   IEEE Transactions on Image Procession (TIP), 2023 (<a href="https://ieeexplore.ieee.org/document/10190308" target="_blank">paper</a>). </span></td>
+  </tr> </span></td>
+</tr>
+	
 <tr>
     <td><img src="cvpr2023.png" width="192" class="image_float_left" /> </td>
     <td><strong>Scalable, Detailed and Mask-free Universal Photometric Stereo</strong><br />
