--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@ ul.nav a:hover, ul.nav a:active, ul.nav a:focus {
 <table width="100%" border="0">
 
 <tr>
-    <td><img src="fig_icip2022_od.png" width="192" class="image_float_left" /> </td>
+    <td><img src="fig_cvpr2024.png" width="192" class="image_float_left" /> </td>
     <td><strong>Entity-NeRF: Detecting and Removing Moving Entities in Urban Scenes. </strong><br />
     <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">  Takashi Otonari, Satoshi Ikehata, Kiyoharu Aizawa.   In proceedings of CVF/IEEE Computer Vision and Pattern Recognition (CVPR), 2024.</td>
   </tr> </span></td>
