--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@ ul.nav a:hover, ul.nav a:active, ul.nav a:focus {
         <td align="left"><strong>Satoshi Ikehata, PhD</strong></td>
       </tr>
       <tr>
-        <td align="left">Assistant Proffesor in  <a href="https://www.nii.ac.jp/en/" target="_blank">National Institute of Informatics (Since 2017)</a>
+        <td align="left">Associate Proffesor in  <a href="https://www.nii.ac.jp/en/" target="_blank">National Institute of Informatics (Since 2017)</a>
 			</td>
       </tr>
       <tr>
