--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@ ul.nav a:hover, ul.nav a:active, ul.nav a:focus {
 <table width="100%" border="0">
 
 <tr>
-    <td><img src="fig_eccv2024.png" width="192" class="image_float_left" /> </td>
+    <td><img src="fig_eccv2024_ps.png" width="192" class="image_float_left" /> </td>
     <td><strong>Physics-Free Spectrally Multiplexed Photometric Stereo under Unknown Spectral Composition. </strong><br />
     <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">  Satoshi Ikehata, 
 	    Yuta Asano. In proceedings of European Conference on Computer Vision (ECCV), 2024.</td>
@@ -264,7 +264,7 @@ ul.nav a:hover, ul.nav a:active, ul.nav a:focus {
 </tr>
 
 <tr>
-    <td><img src="fig_eccv2024.png" width="192" class="image_float_left" /> </td>
+    <td><img src="fig_eccv2024_relight.png" width="192" class="image_float_left" /> </td>
     <td><strong>Towards Single-Shot Photometric Stereo through Material Estimation and Relighting. </strong><br />
     <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">  Ashish Tiwari
  , Satoshi Ikehata, Shanmuganathan Raman. In proceedings of European Conference on Computer Vision (ECCV), 2024.</td>
