--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@ ul.nav a:hover, ul.nav a:active, ul.nav a:focus {
     <td><img src="fig_eccv2024_ps.png" width="192" class="image_float_left" /> </td>
     <td><strong>Physics-Free Spectrally Multiplexed Photometric Stereo under Unknown Spectral Composition. </strong><br />
     <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">  Satoshi Ikehata, 
-	    Yuta Asano. In proceedings of European Conference on Computer Vision (ECCV), 2024.</td>
+	    Yuta Asano. In proceedings of European Conference on Computer Vision (ECCV), 2024.　</td>
   </tr> </span></td>
 </tr>
 
@@ -274,7 +274,7 @@ ul.nav a:hover, ul.nav a:active, ul.nav a:focus {
 <tr>
     <td><img src="fig_cvpr2024.png" width="192" class="image_float_left" /> </td>
     <td><strong>Entity-NeRF: Detecting and Removing Moving Entities in Urban Scenes. </strong><br />
-    <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">  Takashi Otonari, Satoshi Ikehata, Kiyoharu Aizawa.   In proceedings of CVF/IEEE Computer Vision and Pattern Recognition (CVPR), 2024.</td>
+    <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">  Takashi Otonari, Satoshi Ikehata, Kiyoharu Aizawa.   In proceedings of CVF/IEEE Computer Vision and Pattern Recognition (CVPR), 2024　(<a href="https://arxiv.org/abs/2303.15724" target="_blank">paper (arxiv)</a>, <a href="https://otonari726.github.io/entitynerf/" target="_blank">website</a>).</td>
   </tr> </span></td>
 </tr>
 
