--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@ ul.nav a:hover, ul.nav a:active, ul.nav a:focus {
 <tr>
     <td><img src="fig_cvpr2024.png" width="192" class="image_float_left" /> </td>
     <td><strong>Entity-NeRF: Detecting and Removing Moving Entities in Urban Scenes. </strong><br />
-    <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">  Takashi Otonari, Satoshi Ikehata, Kiyoharu Aizawa.   In proceedings of CVF/IEEE Computer Vision and Pattern Recognition (CVPR), 2024　(<a href="https://arxiv.org/abs/2303.15724" target="_blank">paper (arxiv)</a>, <a href="https://otonari726.github.io/entitynerf/" target="_blank">website</a>).</td>
+    <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">  Takashi Otonari, Satoshi Ikehata, Kiyoharu Aizawa.   In proceedings of CVF/IEEE Computer Vision and Pattern Recognition (CVPR), 2024　(<a href="https://arxiv.org/pdf/2403.16141" target="_blank">paper (arxiv)</a>, <a href="https://otonari726.github.io/entitynerf/" target="_blank">website</a>).</td>
   </tr> </span></td>
 </tr>
 
