--- a/index.html
+++ b/index.html
@@ -253,6 +253,7 @@ ul.nav a:hover, ul.nav a:active, ul.nav a:focus {
     <p>3D Scene Reconstruction, Time-of-flight Imaging, Image Super-resolution, Virtual and Augmented Reality, Human Cognition and Perception</p>
 
 <h4 class="session">Selected Papers</h4>
+Full publication list is available here　<a href="https://researchmap.jp/sikehata" target="_blank">researchmap</a>.
 <table width="100%" border="0">
 
 <tr>
@@ -339,17 +340,6 @@ ul.nav a:hover, ul.nav a:active, ul.nav a:focus {
     <td><img src="360sr.jpg" width="192" class="image_float_left" /> </td>
     <td><strong>360° Single Image Super Resolution via Distortion-Aware Network and Distorted Perspective Images.</strong><br />
     <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">  Akito Nishiyama, Satoshi Ikehata, Kiyoharu Aizawa.  In proceedings of International Conference on Image Processing (ICIP), 2021 (<a href="https://ieeexplore.ieee.org/document/9506233" target="_blank">paper</a>). </span></td>
-</tr>
-<tr>
-    <td></td>
-    <td><strong>三次元構造エッジ推定に基づく深層学習を用いた単眼画像からのシーンメッシュ復元.</strong><br />
-    <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">  金子真也,櫻田健,池畑諭,相澤清晴.  画像の認識・理解シンポジウム（MIRU), 2020 </span></td>
-</tr>
-<tr>
-    <td></td>
-    <td><strong>The Color Black is Most Important and Special for Making Professional
-Wrestlers Attractive and Fearful. </strong><br />
-    <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">Tomohiko Akagi, Satoshi Ikehata, Takeharu Seno.  In proceedings of The 5th asian color association conference (ACA), 2019. </span></td>
 </tr>
 <tr>
     <td><img src="fig_eccv2018.png" width="192" class="image_float_left" /> </td>
