--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@ ul.nav a:hover, ul.nav a:active, ul.nav a:focus {
     <p>3D Scene Reconstruction, Time-of-flight Imaging, Image Super-resolution, Virtual and Augmented Reality, Human Cognition and Perception</p>
 
 <h4 class="session">Selected Papers</h4>
-Full publication list is available here　<a href="https://researchmap.jp/sikehata" target="_blank">researchmap</a>.
+Full publication list is available at <a href="https://researchmap.jp/sikehata?lang=en" target="_blank">researchmap</a>.
 <table width="100%" border="0">
 
 <tr>
