--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@ Full publication list is available at <a href="https://researchmap.jp/sikehata?l
 
 <tr>
     <td><img src="fig_eccv2024_ps.png" width="192" class="image_float_left" /> </td>
-    <td><strong>Physics-Free Spectrally Multiplexed Photometric Stereo under Unknown Spectral Composition. </strong><br />
+    <td><strong>SpectraM-PS: Spectrally Multiplexed Photometric Stereo under Unknown Spectral Composition. </strong><br />
     <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">  Satoshi Ikehata, 
 	    Yuta Asano. In proceedings of European Conference on Computer Vision (ECCV), 2024.　</td>
   </tr> </span></td>
