--- a/index.html
+++ b/index.html
@@ -257,6 +257,14 @@ Full publication list is available at <a href="https://researchmap.jp/sikehata?l
 <table width="100%" border="0">
 
 <tr>
+    <td><img src="fig_icip2024.png" width="192" class="image_float_left" /> </td>
+    <td><strong>
+Gumble-NeRF: Representing Unseen Objects as Part-compositional Neural Radiance Feilds. </strong><br />
+    <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">  Yusuke Sekikawa, Chingwei Hsu, Satoshi Ikehata, Rei Kawakami, Ikuro Sato. In proceedings of International Conference on Image Processing (ICIP), 2024.　</td>
+  </tr> </span></td>
+</tr>
+	
+<tr>
     <td><img src="fig_eccv2024_ps.png" width="192" class="image_float_left" /> </td>
     <td><strong>SpectraM-PS: Spectrally Multiplexed Photometric Stereo under Unknown Spectral Composition. </strong><br />
     <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">  Satoshi Ikehata, 
