--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@ Gumble-NeRF: Representing Unseen Objects as Part-compositional Neural Radiance F
     <td><img src="fig_eccv2024_ps.png" width="192" class="image_float_left" /> </td>
     <td><strong>SpectraM-PS: Spectrally Multiplexed Photometric Stereo under Unknown Spectral Composition. </strong><br />
     <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">  Satoshi Ikehata, 
-	    Yuta Asano. In proceedings of European Conference on Computer Vision (ECCV), 2024 (accepted as an oral paper).  　</td>
+	    Yuta Asano. In proceedings of European Conference on Computer Vision (ECCV), 2024 (accepted as an oral presentation).  　</td>
   </tr> </span></td>
 </tr>
 
