--- a/index.html
+++ b/index.html
@@ -3,8 +3,36 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>Satoshi Ikehata</title>
+	
 <style type="text/css">
 <!--
+	announce {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            padding: 50px;
+        }
+        .announcement {
+            background-color: #ffcc00;
+            padding: 20px;
+            border-radius: 10px;
+            display: inline-block;
+            font-size: 24px;
+            font-weight: bold;
+            color: #333;
+        }
+        .apply-link {
+            display: block;
+            margin-top: 20px;
+            font-size: 20px;
+            color: #fff;
+            background-color: #007bff;
+            padding: 10px 20px;
+            border-radius: 5px;
+            text-decoration: none;
+        }
+        .apply-link:hover {
+            background-color: #0056b3;
+        }
 body {
 	background: #FFFFFF;
 	margin: 0;
@@ -196,6 +224,14 @@ ul.nav a:hover, ul.nav a:active, ul.nav a:focus {
         <td height="27" align="left"> (<a href="cv.pdf" target="_blank">curriculum vitae</a>) </td>
       </tr>
     </table>
+<announce>
+    <div class="announcement">
+        I am currently looking for talented Ph.D students at SOKENDAI and interns at NII (NII International Internship Program, 2025 1st Call Applications must be sent to me by the end of March 2025, at 17:00 JST. Please see more detials 
+        <strong><a href="https://www.nii.ac.jp/en/about/international/mouresearch/internship2025-1/">NII International Internship Program: 2025 1st Call</a></strong>
+　　    <strong><a href="https://https://www.soken.ac.jp/en/prog/informatics/" class="apply-link">SOKENDAI Ph.D Program</a></strong>
+	    
+    </div>
+</announce>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 <h2 class="session">About me</h2>
