--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
             padding: 20px;
             border-radius: 10px;
             display: inline-block;
-            font-size: 24px;
+            font-size: 16px;
             font-weight: bold;
             color: #333;
         }
         .apply-link {
             display: block;
-            margin-top: 20px;
-            font-size: 20px;
+            margin-top: 16px;
+            font-size: 16px;
             color: #fff;
             background-color: #007bff;
             padding: 10px 20px;
@@ -227,16 +227,16 @@ ul.nav a:hover, ul.nav a:active, ul.nav a:focus {
 <announce>
     <div class="announcement">
         I am currently looking for talented Ph.D students at SOKENDAI and interns at NII (NII International Internship Program, 2025 1st Call Applications must be sent to me by the end of March 2025, at 17:00 JST. Please see more detials 
-        <strong><a href="https://www.nii.ac.jp/en/about/international/mouresearch/internship2025-1/">NII International Internship Program: 2025 1st Call</a></strong>
-　　    <strong><a href="https://https://www.soken.ac.jp/en/prog/informatics/" class="apply-link">SOKENDAI Ph.D Program</a></strong>
-	    
+        <p align="left">
+	<p><a href="https://www.nii.ac.jp/en/about/international/mouresearch/internship2025-1/">NII International Internship Program: 2025 1st Call</a></p>
+　　    <p><a href="https://https://www.soken.ac.jp/en/prog/informatics/" class="apply-link">SOKENDAI Ph.D Program</a></p>
     </div>
 </announce>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 <h2 class="session">About me</h2>
 <p align="left">
-<p>- From June 2014 to November 2016, I was a post-doc researcher in Washington University in St. Louis and worked with <a href='http://www.cse.wustl.edu/~furukawa/', target = "_blank">Dr. Yasutaka Furukawa</a>.
+<p>- From June 2014 to November 2016, I was a post-doc researcher in Washington University in St. Louis and worked with <a href='http://www.cse.wustl.edu/~furukawa/', target = "_blank">Dr. Yasutaka Furukawa</a>. </p>
 <p>- I got my Ph. D in 2014 and MS in 2011 in University of tokyo under the supervision of <a href="http://www.hal.t.u-tokyo.ac.jp/~aizawa/index.html" target="_blank">Prof. Kiyoharu Aizawa</a>. </p>
 <p>- I got my BA of Psychology from the University of Tokyo in 2009 under the supervision of <a href="http://www.l.u-tokyo.ac.jp/psy/sato_ind/index.html" target="_blank">Prof. Takao Sato</a>. </p>
 <p>- I worked for<a href="http://research.microsoft.com/en-us/groups/vc/" target="_blank"> Visual Computing Group</a> at Microsoft Research Asia as a visiting student in 2011, supervised by <a href="http://research.microsoft.com/en-us/people/yasumat/" target="_blank">Dr. Yasuyuki Matsushita</a>. </p>
