--- a/index.html
+++ b/index.html
@@ -5,34 +5,20 @@
 <title>Satoshi Ikehata</title>
 	
 <style type="text/css">
-<!--
-	announce {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            padding: 24px;
-        }
-        .announcement {
-            background-color: #ffcc00;
-            padding: 20px;
-            border-radius: 10px;
-            display: inline-block;
-            font-size: 16px;
-            font-weight: bold;
-            color: #333;
-        }
-        .apply-link {
-            display: block;
-            margin-top: 16px;
-            font-size: 16px;
-            color: #fff;
-            background-color: #007bff;
-            padding: 10px 20px;
-            border-radius: 5px;
-            text-decoration: none;
-        }
-        .apply-link:hover {
-            background-color: #0056b3;
-        }
+announce {
+    font-family: Arial, sans-serif;
+    text-align: center;
+    padding: 24px;
+}
+.announcement {
+    background-color: #ffcc00;
+    padding: 20px;
+    border-radius: 10px;
+    display: inline-block;
+    font-size: 16px;
+    font-weight: bold;
+    color: #333;
+}
 body {
 	background: #FFFFFF;
 	margin: 0;
@@ -173,7 +159,6 @@ ul.nav a:hover, ul.nav a:active, ul.nav a:focus {
 	margin-right: 10px;
 	margin-left: 10px;
 }
--->
 </style>
 </head>
 
@@ -229,7 +214,7 @@ ul.nav a:hover, ul.nav a:active, ul.nav a:focus {
         I am currently looking for talented Ph.D students at SOKENDAI and interns at NII (NII International Internship Program, 2025 1st Call Applications must be sent to me by the end of March 2025, at 17:00 JST. Please see more detials 
         <p align="left">
 	<p><a href="https://www.nii.ac.jp/en/about/international/mouresearch/internship2025-1/">NII International Internship Program: 2025 1st Call</a></p>
-　　    <p><a href="https://https://www.soken.ac.jp/en/prog/informatics/" class="apply-link">SOKENDAI Ph.D Program</a></p>
+　　    <p><a href="https://https://www.soken.ac.jp/en/prog/informatics/">SOKENDAI Ph.D Program</a></p>
     </div>
 </announce>
 <p>&nbsp;</p>
