--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
 announce {
     font-family: Arial, sans-serif;
     text-align: center;
-    padding: 24px;
+    padding: 12px;
 }
 .announcement {
-    background-color: #ffcc00;
-    padding: 20px;
+    background-color: #2c3e50;
+    padding: 0;
     border-radius: 10px;
     display: inline-block;
     font-size: 16px;
     font-weight: bold;
-    color: #333;
+    color: #f8f9fa;
 }
 body {
 	background: #FFFFFF;
