--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@ announce {
     font-weight: bold;
     color: #f8f9fa;
 }
+.a:link {
+color:#f8f9fa;
+text-decoration: underline;
+}
+	
 body {
 	background: #FFFFFF;
 	margin: 0;
@@ -211,7 +216,7 @@ ul.nav a:hover, ul.nav a:active, ul.nav a:focus {
     </table>
 <announce>
     <div class="announcement">
-        I am currently looking for talented Ph.D students at SOKENDAI and interns at NII (NII International Internship Program, 2025 1st Call Applications must be sent to me by the end of March 2025, at 17:00 JST. Please see more detials 
+        I am currently looking for talented Ph.D students at SOKENDAI and interns at NII (2025 1st Call of NII International Internship Program). Please see more detials below: 
         <p align="left">
 	<p><a href="https://www.nii.ac.jp/en/about/international/mouresearch/internship2025-1/">NII International Internship Program: 2025 1st Call</a></p>
 　　    <p><a href="https://https://www.soken.ac.jp/en/prog/informatics/">SOKENDAI Ph.D Program</a></p>
