--- a/index.html
+++ b/index.html
@@ -282,25 +282,32 @@ ul.nav a:hover, ul.nav a:active, ul.nav a:focus {
 Full publication list is available at <a href="https://researchmap.jp/sikehata?lang=en" target="_blank">researchmap</a>.
 <table width="100%" border="0">
 
+<tr>
+    <td><img src="fig_cvpr2025.png" width="192" class="image_float_left" /> </td>
+    <td><strong>PS-EIP: Robust Photometric Stereo Based on Event Interval Profile. </strong><br />
+    <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">  Kazuma Kitazawa1, Takahito Aoto, Satoshi Ikehata, Tsuyoshi Takatani. In proceedings of CVF/IEEE Computer Vision and Pattern Recognition (CVPR), 2025.</td>
+  </tr> </span></td>
+</tr>
+
 	
 <tr>
     <td><img src="fig_aaai2025.png" width="192" class="image_float_left" /> </td>
     <td><strong>
 	Rectified Lagrangian for Out-of-Distribution Detection in Modern Hopfield Networks.</strong><br />
-    <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">  Ryo Moriai, Nakamasa Inoue, Masayuki Tanaka, Rei Kawakami, Satoshi Ikehata, Ikuro Sato. In proceedings of Annual AAAI Conference on Artificial Intelligence (AAA), 2025.　</td>
+    <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">  Ryo Moriai, Nakamasa Inoue, Masayuki Tanaka, Rei Kawakami, Satoshi Ikehata, Ikuro Sato. In proceedings of Annual AAAI Conference on Artificial Intelligence (AAAI), 2025.　</td>
   </tr> </span></td>
 </tr>
 <tr>
     <td><img src="fig_accv2024.png" width="192" class="image_float_left" /> </td>
     <td><strong>
 	A simple finetuning strategy based on bias-variance ratios of layer-wise gradients.</strong><br />
-    <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">  M. Tomita, Ikuro Sato, Rei Kawakami, Nakamasa Inoue, Satoshi Ikehata, Masayuki Tanaka, Rei Kawakami, Satoshi Ikehata, Ikuro Sato. In proceedings of Asian Conference on Computer Vision (ACCV), 2025.　</td>
+    <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">  Mao Tomita, Ikuro Sato, Rei Kawakami, Nakamasa Inoue, Satoshi Ikehata, Masayuki Tanaka, Rei Kawakami, Satoshi Ikehata, Ikuro Sato. In proceedings of Asian Conference on Computer Vision (ACCV), 2025.　</td>
   </tr> </span></td>
 </tr>
 <tr>
 	<td><img src="fig_acmap2024.png" width="192" class="image_float_left" /> </td>
 	<td><strong>Investigating the Perception of Facial Anonymization Techniques in 360° Videos</strong><br />
-	<span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">Leslie Wöhler, Satoshi Ikehata, Kiyoharu Aizawa. ACM Transactions on Applied Perception, Volume 21, Issue 4, 2024 (<a href="" target="_blank">source codes</a>). </span></td>
+	<span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">Leslie Wöhler, Satoshi Ikehata, Kiyoharu Aizawa. ACM Transactions on Applied Perception, Volume 21, Issue 4, 2024. </span></td>
 </tr>
 <tr>
     <td><img src="fig_icip2024.png" width="192" class="image_float_left" /> </td>
