--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 announce {
     font-family: Arial, sans-serif;
     text-align: center;
-    padding: 12px;
+    padding: 0;
 }
 .announcement {
     background-color: #2c3e50;
@@ -19,7 +19,7 @@ announce {
     font-weight: bold;
     color: #f8f9fa;
 }
-.a:link {
+.register.a:link {
 color:#f8f9fa;
 text-decoration: underline;
 }
@@ -217,9 +217,9 @@ ul.nav a:hover, ul.nav a:active, ul.nav a:focus {
 <announce>
     <div class="announcement">
         I am currently looking for talented Ph.D students at SOKENDAI and interns at NII (2025 1st Call of NII International Internship Program). Please see more detials below: 
-        <p align="left">
+	<p align="left">
 	<p><a href="https://www.nii.ac.jp/en/about/international/mouresearch/internship2025-1/">NII International Internship Program: 2025 1st Call</a></p>
-　　    <p><a href="https://https://www.soken.ac.jp/en/prog/informatics/">SOKENDAI Ph.D Program</a></p>
+	<p><a href="https://https://www.soken.ac.jp/en/prog/informatics/">SOKENDAI Ph.D Program</a></p>
     </div>
 </announce>
 <p>&nbsp;</p>
