--- a/index.html
+++ b/index.html
@@ -12,17 +12,23 @@ announce {
 }
 .announcement {
     background-color: #2c3e50;
-    padding: 0;
+    padding: 10px;
     border-radius: 10px;
     display: inline-block;
     font-size: 16px;
     font-weight: bold;
     color: #f8f9fa;
 }
-.register.a:link {
-color:#f8f9fa;
-text-decoration: underline;
+
+.announcement p {
+    margin: 5px 0; /* 本文とリンクの間のマージンを小さく */
 }
+
+.announcement a {
+    color: #ffffff; /* リンクを白く */
+    text-decoration: underline;
+}
+
 	
 body {
 	background: #FFFFFF;
