--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@ announce {
 }
 
 .announcement p {
-    margin: 5px 0; /* 本文とリンクの間のマージンを小さく */
+    margin: 5px 0; 
 }
-
-.announcement a {
-    color: #ffffff; /* リンクを白く */
+.announcement a,
+.announcement a:visited, 
+.announcement a:hover,
+.announcement a:active {
+    color: #ffffff;
     text-decoration: underline;
-}
-
-	
+}	
 body {
 	background: #FFFFFF;
 	margin: 0;
@@ -225,7 +225,7 @@ ul.nav a:hover, ul.nav a:active, ul.nav a:focus {
         I am currently looking for talented Ph.D students at SOKENDAI and interns at NII (2025 1st Call of NII International Internship Program). Please see more detials below: 
 	<p align="left">
 	<p><a href="https://www.nii.ac.jp/en/about/international/mouresearch/internship2025-1/">NII International Internship Program: 2025 1st Call</a></p>
-	<p><a href="https://https://www.soken.ac.jp/en/prog/informatics/">SOKENDAI Ph.D Program</a></p>
+	<p><a href="https://www.soken.ac.jp/en/prog/informatics/">SOKENDAI Ph.D Program</a></p>
     </div>
 </announce>
 <p>&nbsp;</p>
