--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@ Full publication list is available at <a href="https://researchmap.jp/sikehata?l
     <td><img src="fig_accv2024.png" width="192" class="image_float_left" /> </td>
     <td><strong>
 	A simple finetuning strategy based on bias-variance ratios of layer-wise gradients.</strong><br />
-    <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">  Mao Tomita, Ikuro Sato, Rei Kawakami, Nakamasa Inoue, Satoshi Ikehata, Masayuki Tanaka, Rei Kawakami, Satoshi Ikehata, Ikuro Sato. In proceedings of Asian Conference on Computer Vision (ACCV), 2025.　</td>
+    <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">  Mao Tomita, Ikuro Sato, Rei Kawakami, Nakamasa Inoue, Satoshi Ikehata, Masayuki Tanaka, Rei Kawakami, Satoshi Ikehata, Ikuro Sato. In proceedings of Asian Conference on Computer Vision (ACCV), 2024 (accepted as an oral presentation).　</td>
   </tr> </span></td>
 </tr>
 <tr>
