--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@ ul.nav a:hover, ul.nav a:active, ul.nav a:focus {
 <h3 class="session">Class (SOKENDAI)</h3>
 	<p> Fall 2020: <a href="mediaprocessing2020.html" target="_blank">Fundamentals of Media Processing</a></p>
 <h3 class="session">Research Interests</h3>
-    <p>3D Scene Reconstruction, Time-of-flight Imaging, Image Super-resolution, Virtual and Augmented Reality, Human Cognition and Perception</p>
+    <p>3D Computer Vision, Deep Learning Algorithms, Multi Sensor/Modality Fusion, Human Cognition and Perception</p>
 
 <h4 class="session">Selected Papers</h4>
 Full publication list is available at <a href="https://researchmap.jp/sikehata?lang=en" target="_blank">researchmap</a>.
