--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@ Full publication list is available at <a href="https://researchmap.jp/sikehata?l
 <tr>
     <td><img src="fig_cvpr2025.png" width="192" class="image_float_left" /> </td>
     <td><strong>PS-EIP: Robust Photometric Stereo Based on Event Interval Profile. </strong><br />
-    <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">  Kazuma Kitazawa1, Takahito Aoto, Satoshi Ikehata, Tsuyoshi Takatani. In proceedings of CVF/IEEE Computer Vision and Pattern Recognition (CVPR), 2025.</td>
+    <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">  Kazuma Kitazawa, Takahito Aoto, Satoshi Ikehata, Tsuyoshi Takatani. In proceedings of CVF/IEEE Computer Vision and Pattern Recognition (CVPR), 2025.</td>
   </tr> </span></td>
 </tr>
 
