--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@ ul.nav a:hover, ul.nav a:active, ul.nav a:focus {
 			</td>
       </tr>
       <tr>
-	  <td align="left">Specially Appointed Associate Proffesor at <a href="https://d-itlab.c.titech.ac.jp/miru2022event//" target="_blank">Recognition and Learning Algoritym Laboratory in Tokyo Tech (Since 2023)</a>
+	  <td align="left">Senior Researcher at DensoIT Lab working in<a href="https://d-itlab.c.titech.ac.jp/miru2022event//" target="_blank">Recognition and Learning Algoritym Laboratory in Tokyo Tech (Since 2023)</a>
       </tr>
       <tr>
 	  <td align="left">Visiting Researcher at  <a href="http://www.hal.t.u-tokyo.ac.jp/lab/en/index_1.xhtml" target="_blank">Aizawa-Yamakata-Matsui Lab in UTokyo (Since 2020)</a>
@@ -222,9 +222,8 @@ ul.nav a:hover, ul.nav a:active, ul.nav a:focus {
     </table>
 <announce>
     <div class="announcement">
-        I am currently looking for talented Ph.D students at SOKENDAI and interns at NII (2025 1st Call of NII International Internship Program). Please see more detials below: 
+        I am currently looking for talented Ph.D students at SOKENDAI. Please see more detials below: 
 	<p align="left">
-	<p><a href="https://www.nii.ac.jp/en/about/international/mouresearch/internship2025-1/">NII International Internship Program: 2025 1st Call</a></p>
 	<p><a href="https://www.soken.ac.jp/en/prog/informatics/">SOKENDAI Ph.D Program</a></p>
     </div>
 </announce>
@@ -287,6 +286,27 @@ ul.nav a:hover, ul.nav a:active, ul.nav a:focus {
 <h4 class="session">Selected Papers</h4>
 Full publication list is available at <a href="https://researchmap.jp/sikehata?lang=en" target="_blank">researchmap</a>.
 <table width="100%" border="0">
+
+<tr>
+    <td><img src="fig_iccv2025.png" width="192" class="image_float_left" /> </td>
+    <td><strong>PINO: Person-Interaction Noise Optimization for Long-Duration and Customizable Motion Generation of Arbitrary-Sized Groups. </strong><br />
+    <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">  Sakuya Ota, Qing Yu, Kent Fujiwara, Satoshi Ikehata, Ikuro Sato. In proceedings of CVF/IEEE International Conference of Computer Vision (ICCV), 2025.</td>
+  </tr> </span></td>
+</tr>
+
+<tr>
+    <td><img src="fig_icip2025b.png" width="192" class="image_float_left" /> </td>
+    <td><strong>Measuring Distortion Strength With Dewarping Diffusion Models in Anomaly Detection. </strong><br />
+    <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">  Akira Uchida, Satoshi Ikehata, Yuichi Yoshida, Ikuro Sato. In proceedings of IEEE International Conference on Image Processing (ICIP), 2025.</td>
+  </tr> </span></td>
+</tr>
+
+<tr>
+    <td><img src="fig_icip2025a.png" width="192" class="image_float_left" /> </td>
+    <td><strong> PREFACE: Metric Learning in Perceptual Facial Similarity fo Encanced Face Anomaization. </strong><br />
+    <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">  Kazuma Kitazawa, Haruka Kumagai, Leslie Wöhler, Satoshi Ikehata, Kiyoharu Aizawa. In proceedings of IEEE International Conference on Image Processing (ICIP), 2025.</td>
+  </tr> </span></td>
+</tr>
 
 <tr>
     <td><img src="fig_cvpr2025.png" width="192" class="image_float_left" /> </td>
