--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@ Full publication list is available at <a href="https://researchmap.jp/sikehata?l
 <tr>
     <td><img src="fig_icip2025a.png" width="192" class="image_float_left" /> </td>
     <td><strong> PREFACE: Metric Learning in Perceptual Facial Similarity fo Encanced Face Anomaization. </strong><br />
-    <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">  Kazuma Kitazawa, Haruka Kumagai, Leslie Wöhler, Satoshi Ikehata, Kiyoharu Aizawa. In proceedings of IEEE International Conference on Image Processing (ICIP), 2025.</td>
+    <span id="ctl00_cph_paperSummary_gvPaperSummary_ctl05_PaperTitleLabel1"><span id="ctl00_cph_paperSummary_gvPaperSummary_ctl04_PaperTitleLabel2">  Haruka Kumagai, Leslie Wöhler, Satoshi Ikehata, Kiyoharu Aizawa. In proceedings of IEEE International Conference on Image Processing (ICIP), 2025.</td>
   </tr> </span></td>
 </tr>
 
